--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-title: Catbook #Your awesome title
+title: cao_yang #Your awesome title
 email: #youremail@domain.com
 description: > # this means to ignore newlines until "baseurl"
   Write an awesome description for your new site here. You can edit this
@@ -20,8 +20,8 @@ cusdis:
     app_id: #your cusdis app_id
 
 user:
-  name: Catbook
-  pic: /assets/img/cat.jpg
+  name: 山主
+  pic: /assets/img/tx.jpg
   picAlt: "catbook"
   job: a category-centric theme
   aboutme: true # comment this out if you don't need the 'about' page.
