--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 
 title: cao_yang #Your awesome title
-email: #youremail@domain.com
+email: aries_caoyang@163.com #youremail@domain.com
 description: > # this means to ignore newlines until "baseurl"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
 baseurl: # the subpath of the site
-url: http://starry99.github.io/catbook # the base hostname & protocol for your site
+url: https://aries-cy.github.io/ # the base hostname & protocol for your site
 
 permalink: /:year-:month/:title
 timezone:
@@ -23,7 +23,7 @@ user:
   name: 山主
   pic: /assets/img/tx.jpg
   picAlt: "catbook"
-  job: a category-centric theme
+  job: Java工程师
   aboutme: true # comment this out if you don't need the 'about' page.
 
 exclude:
