--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-title: cao_yang #Your awesome title
+title: 阳的博客 #Your awesome title
 email: aries_caoyang@163.com #youremail@domain.com
 description: > # this means to ignore newlines until "baseurl"
   Write an awesome description for your new site here. You can edit this
@@ -23,7 +23,7 @@ user:
   name: 山主
   pic: /assets/img/tx.jpg
   picAlt: "catbook"
-  job: Java工程师
+  job: 不畏将来，不念过往
   aboutme: false # comment this out if you don't need the 'about' page.
 
 exclude:
